feat: add functionality for fetching seocial media
