# src/config/swagger.yaml
@@ -245,6 +245,33 @@ paths:
           description: Invalid file
 
   /band/social-media:
+    get:
+      summary: Returns band's social media.
+      security:
+        - bearerAuth: []
+      tags:
+        - 'Social Media'
+      responses:
+        '200':
+          description: A JSON array containing band's social media objects
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  allOf:
+                    - type: object
+                      properties:
+                        _id:
+                          type: string
+                          example: some-ID
+                    - $ref: '#/components/schemas/SocialMedia'
+                    - type: object
+                      properties:
+                        iconPath:
+                          type: string
+                          example: path/to/icon.png
+
     post:
       summary: Adds new social media.
       security:
